新增dockerfile，回退使用gin路由模式，新增流量分析模块
